--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client", "webworker"],
-    "lib": ["DOM", "DOM.Iterable", "ESNext", "WebWorker"],
+    "types": ["vite/client"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "noEmit": true,
     "isolatedModules": true,
     "baseUrl": ".",
